# sap_tender_bot

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  TASKS.md  config.yaml  pyproject.toml  requirements.txt  streamlit_app.py  ui_common.py
.github/workflows/: ci.yml
pages/: 01_Inbox.py  02_Review.py  03_Logs.py  04_Admin.py  05_Settings.py  06_Attachments.py
sap_tender_bot/: __init__.py  daily_digest.py
scripts/: eval_attachment_prompts.py  run.ps1
src/: cli.py  config.py  daily_digest.py
src/connectors/: canadabuys_tender_notices.py  open_canada_ckan.py
src/pipeline/: filter.py  ingest.py  llm.py  notify_email.py
src/sap_tender_bot/: __init__.py  cli.py  config.py  daily_digest.py  store.py  ui.py
src/sap_tender_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sap_tender_bot/connectors/: __init__.py  canadabuys_tender_notices.py
src/sap_tender_bot/pipeline/: attachments.py  filter.py  ingest.py  llm.py  notify_email.py  semantic.py
src/sap_tender_bot/utils/: rate_limit.py
tests/: test_attachments.py  test_filter.py  test_smoke.py
